namespace Cviceni_3_4
{
    internal class Program
    {
        static void Main(string[] args)
        {
            TcpServer server = new TcpServer(8086);
        }
    }
}
